<resources>
    <string name="app_name">MainScreen</string>
    <string name="japossuiconta"><u>Já possuo conta</u></string>
    <string name="esquecisenha"><u>Esqueci minha senha</u></string>
    <string name="welcome_message">Bem-Vindo, %s!</string>
    <string name="projetos_abertos">Vizualizar projetos</string>
    <string name="titulo">Titulo</string>
    <string name="nenhum_projeto">Nenhum projeto cadastrado</string>
    <string name="linguagem">Linguagem</string>
    <string name="descricao">Descricao</string>
    <string name="ex_titulo">Site Institucional</string>
    <string name="ex_linguagem">PHP</string>
    <string name="ex_descricao">Site institucional para startup</string>
    <string name="valor">Valor</string>
    <string name="ex_valor">200</string>
    <string name="editar">Editar</string>
    <string name="editar_projeto">Editar Projeto</string>
    <string name="excluir">Exluir</string>
    <string name="btn_adicionar">Adicionar</string>
    <string name="pagar">Efetuar Pagamento</string>
    <string name="nome">Nome</string>
    <string name="empresa">Empresa</string>
    <string name="login">Login</string>
    <string name="lembrar_login">Lembrar usuario</string>
    <string name="pesquisar_dev">Pesquisar Devs</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="voltar">Voltar</string>
    <string name="efetuar_pagamento">Efetuar Pagamento</string>
    <string name="pagamento">Pagamento</string>
    <string name="btn_entrar">Entrar</string>
    <string name="vizualizar_projetos">Voltar tela inicial</string>
    <string name="pagamento_sucesso">Pagamento efetuado com sucesso!</string>
    <string name="login_invalido">Usuario ou senha incorretos!</string>
    <string name="app_pagamento_informativo">Este pagamento será realizado ao desenvolvedor somente quando for apontado que ele finalizou o projeto.</string>
    <string name="represento_empresa">Eu represento uma empresa</string>
    <string name="btn_registrar">Registrar</string>
    <string name="sou_dev">\nSou um Dev</string>
    <string name="em_breve">Em breve</string>
    <string name="dados_invalidos">Dados invalidos, preencha todos os campos!</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="projeto">Projeto</string>
    <string name="desenvolvedor">Desenvolvedor</string>
    <string name="adicionar_projeto">Adicionar Projeto</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="consultar_carteira">Consultar Carteira</string>
    <string name="devs_recomendados">Devs recomendados</string>
    <string name="plataforma_inv">Plataforma de investimentos</string>
    <string name="php">PHP</string>
    <string name="proj_desc">Descricao do projeto</string>
    <string name="proj_andamento">Projetos em andamento</string>
    <string name="proj_concluido">Projetos concluídos</string>
    <string name="proj_aberto">Projetos abertos</string>
    <string name="salvar_edicao">Salvar</string>
</resources>
