<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaEditarProjeto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/editar_projeto"
            android:textAlignment="center"
            android:textSize="34dp"
            android:textStyle="bold"
            android:layout_marginBottom="20sp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo" />

            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_titulo"
                android:inputType="text" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linguagem" />

            <EditText
                android:id="@+id/etLinguagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_linguagem"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descricao" />

            <EditText
                android:id="@+id/etDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_descricao"
                android:inputType="text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor" />

            <EditText
                android:id="@+id/etValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_valor"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnAdicionarProjeto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                android:textColor="@color/white"
                android:onClick="editarProjeto"
                android:backgroundTint="@color/primary_devfy_blue"
                />
            <Button
                android:id="@+id/btn_excluir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excluir"
                android:textColor="@color/white"
                android:onClick="excluirProjeto"
                android:backgroundTint="@color/primary_red"
                />
        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>