<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/efetuar_pagamento"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34dp"
            android:textStyle="bold"
            android:background="@drawable/borda_azul"/>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/projeto"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="6sp"/>

            <EditText
                android:id="@+id/etProjeto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ex: Site Institucional"
                android:gravity="center"
                android:layout_marginTop="6sp"
                android:inputType="text"
                android:background="@drawable/customborder"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textStyle="bold"
                android:layout_marginTop="6sp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/etValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ex: 200,40"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:layout_marginTop="4sp"
                android:background="@drawable/customborder"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/desenvolvedor" />

            <EditText
                android:layout_marginTop="6sp"
                android:id="@+id/etDesenvolvedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ex: Julio Ferreira"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:background="@drawable/customborder"/>


            <Button
                android:layout_marginTop="12dp"
                android:id="@+id/btnPagar"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/pagar"
                android:textAllCaps="false"
                android:onClick="irTelaConfirmacaoPagamento"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary_devfy_blue"
                />

        </LinearLayout>

</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="350sp"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="@string/app_pagamento_informativo" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo">

            </ImageView>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
