<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="150sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20sp"
            android:text="@string/pagamento"
            android:textColor="@color/azuldevfy"
            android:textAlignment="center"
            android:textSize="34dp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imgResultadoPagamento"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ok" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20sp"
            android:text="@string/pagamento_sucesso"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnFindMe"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vizualizar_projetos"
                android:onClick="irTelaVizualizarProjetos"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary_devfy_blue"
                />
        </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>