<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="66dp"
                android:layout_weight="1"
                android:src="@drawable/logo"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/empresa"></ImageView>

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="125sp"
                    android:layout_gravity="center"
                    android:text="@string/represento_empresa"
                    android:textAlignment="center"
                    android:textColor="@color/azuldevfy"
                    android:textSize="25dp"
                    android:textStyle="bold"></TextView>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="66dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/azuldevfy"
                    android:onClick="irTelaRegistrar"
                    android:text="@string/btn_registrar"
                    android:textColor="@color/white"></Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/dev"></ImageView>

                <TextView
                    android:layout_width="100sp"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:text="@string/sou_dev"
                    android:textAlignment="center"
                    android:textColor="@color/azuldevfy"
                    android:textSize="25dp"
                    android:textStyle="bold"></TextView>

                <Button
                    android:layout_width="155dp"
                    android:layout_height="66dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/gray"
                    android:onClick="embreve"
                    android:text="@string/em_breve"></Button>

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="irTelaLogin"
            android:text="@string/japossuiconta"
            android:textColor="@color/azuldevfy"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
