<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_azul"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="start"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/user_icon" />

                <TextView
                    android:id="@+id/tv_welcome_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/welcome_message"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:layout_marginBottom="24sp"
                android:gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="6sp"
                        android:src="@drawable/loupe" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Pesquise desenvolvedores" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="62dp"
                    android:src="@drawable/adicionar"
                    android:onClick="irAdicionarProjeto"
                    />

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="128dp"
                    android:src="@drawable/hand"
                    android:onClick="irEfetuarPagamento"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24sp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="46dp"
                    android:layout_weight="1"
                    android:text="@string/adicionar_projeto" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="32dp"
                    android:layout_weight="1"
                    android:text="@string/realizar_pagamento" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="62dp"
                    android:src="@drawable/wallet" />

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="128dp"
                    android:src="@drawable/usuario" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24sp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="46dp"
                    android:layout_weight="1"
                    android:text="@string/consultar_carteira" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="32dp"
                    android:layout_weight="1"
                    android:text="@string/devs_recomendados" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:layout_marginBottom="90dp"
                android:backgroundTint="#2343C4"
                android:text="@string/projetos_abertos"
                android:textAllCaps="false"
                android:onClick="irTelaVizualizarProjetos"
                app:cornerRadius="10dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:src="@drawable/logo" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
